--- a/Book.html
+++ b/Book.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Movie</title>
+    <title>Book</title>
   </head>
   <body>
     <h4><a href="index.html">MY TASTE 2020</a><h4>
